--- a/.github/workflows/composer.yml
+++ b/.github/workflows/composer.yml
@@ -1,23 +1,33 @@
-name: Auto-deploy DAGs to Cloud Composer
+name: Deploy to Google Composer
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up Cloud Build
-        uses: google-cloud-actions/setup-cloud-build@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
-          keyfile: ${{ secrets.GCP_SA_KEY }}
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+      with:
+        version: 'latest'
 
-      - name: Build and deploy DAGs
-        run: |
-          gcloud builds submit --config cloudbuild.yaml
+    - name: Decode GCP_SA_KEY_BASE64 and write to file
+      run: echo "${{ secrets.GCP_SA_KEY }}" > key.json
+
+    - name: Authenticate to Google Cloud
+      run: gcloud auth activate-service-account ${{ secrets.GCP_SA_EMAIL }} --key-file=key.json
+
+    - name: Copy DAGs to Composer
+      run: |
+        gcloud composer environments storage dags import \
+          --environment netskope \
+          --location us-central1 \
+          --source dags
+
