--- a/.github/workflows/composer.yml
+++ b/.github/workflows/composer.yml
@@ -19,7 +19,7 @@ jobs:
         version: 'latest'
 
     - name: Decode GCP_SA_KEY_BASE64 and write to file
-      run: echo "${{ secrets.GCP_SA_KEY }}" | base64 > key.json
+      run: echo -n "${{ secrets.GCP_SA_KEY }}" | base64 > key.json
 
     - name: Authenticate to Google Cloud
       run: gcloud auth activate-service-account ${{ secrets.GCP_SA_EMAIL }} --key-file=key.json
