--- a/.github/workflows/composer.yml
+++ b/.github/workflows/composer.yml
@@ -18,14 +18,12 @@ jobs:
       with:
         version: 'latest'
 
-    - name: Decode GCP_SA_KEY_BASE64 and write to file
-      run: base64 "${{ secrets.GCP_SA_KEY }}" > key.json
-
-    - name: Checkout
-      run: cat key.json
-
-    - name: Authenticate to Google Cloud
-      run: gcloud auth activate-service-account ${{ secrets.GCP_SA_EMAIL }} --key-file=key.json
+    - name: Authenticate to Google Cloud\
+      uses: google-github-actions/setup-gcloud@v0.2.0
+      with:
+        project_id: netskope
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        service_account_email: ${{ secrets.GCP_SA_EMAIL }}
 
     - name: Copy DAGs to Composer
       run: |
