--- a/.github/workflows/composer.yml
+++ b/.github/workflows/composer.yml
@@ -29,7 +29,7 @@ jobs:
       run: gcloud config set project airflow-tutorial 
 
     - name: Test list files
-      run: list gs://us-central1-netskope-99d85477-bucket/dags
+      run: gsutil ls gs://us-central1-netskope-99d85477-bucket/dags
 
     - name: Copy DAGs to Composer
       run: |
