--- a/.github/workflows/composer.yml
+++ b/.github/workflows/composer.yml
@@ -27,7 +27,12 @@ jobs:
 
     - name: Set Cloud Project
       run: gcloud config set project airflow-tutorial 
+    
+    - name: Remove old files
+      run: |
+        gsutil -m rm gs://us-central1-netskope-99d85477-bucket/dags/*
+        gsutil -m mv gs://us-central1-netskope-99d85477-bucket/dags/airflow_monitoring.py gs://us-central1-netskope-99d85477-bucket/dags/airflow_monitoring.py.bak || true
 
-    - name: Test list files
+    - name: Upload new files
       run: gsutil cp -r dags/* gs://us-central1-netskope-99d85477-bucket/dags/
 
