--- a/.github/workflows/composer.yml
+++ b/.github/workflows/composer.yml
@@ -30,8 +30,8 @@ jobs:
 
     - name: Update Dependency
       run: gcloud composer environments update netskope \
-          --location us-central1 \
-          --update-pypi-packages-from-file requirements.txt
+          --location=us-central1 \
+          --update-pypi-packages-from-file requirements.txt\
     
     - name: Remove old files
       run: |
