--- a/.github/workflows/composer.yml
+++ b/.github/workflows/composer.yml
@@ -29,9 +29,10 @@ jobs:
       run: gcloud config set project airflow-tutorial 
 
     - name: Update Dependency
-      run: gcloud composer environments update netskope \
-          --location=us-central1 \
-          --update-pypi-packages-from-file requirements.txt\
+      run: |
+        gcloud composer environments update netskope \
+          --location us-central1 \
+          --update-pypi-packages-from-file requirements.txt
     
     - name: Remove old files
       run: |
