--- a/.github/workflows/deploy_to_vm.yml
+++ b/.github/workflows/deploy_to_vm.yml
@@ -13,12 +13,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v1
+      - name: Authenticate to Google Cloud\
+        uses: google-github-actions/setup-gcloud@v0.2.0
         with:
-          version: 'latest'
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
+          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
 
       - name: Authenticate to Google Cloud
         run: |
