--- a/.github/workflows/deploy_to_vm.yml
+++ b/.github/workflows/deploy_to_vm.yml
@@ -13,13 +13,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Authenticate to Google Cloud\
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          version: 'latest'
+
+      - name: Authenticate to Google Cloud
         uses: google-github-actions/setup-gcloud@v0.2.0
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
 
-      - name: Authenticate to Google Cloud
+
+      - name: Upload DAGs
         run: |
           gcloud compute scp dags/airflow_main.py airflow-test:/opt
