--- a/.github/workflows/deploy_to_vm.yml
+++ b/.github/workflows/deploy_to_vm.yml
@@ -28,4 +28,4 @@ jobs:
 
       - name: Upload DAGs
         run: |
-          gcloud compute scp dags/airflow_main.py airflow-test:/home/berlin_hsin --zone us-central1-b
+          gcloud compute scp dags/airflow_main.py root@airflow-test:/home/berlin_hsin --zone us-central1-b
