--- a/.github/workflows/deploy_to_vm.yml
+++ b/.github/workflows/deploy_to_vm.yml
@@ -28,4 +28,4 @@ jobs:
 
       - name: Upload DAGs
         run: |
-          gcloud compute ssh instance-20240812-082629 --zone us-central1-b --command "ls -al"
+          gcloud compute ssh instance-20240812-082629 --zone us-central1-c --command "ls -al"
