--- a/.github/workflows/test_github_action.yml
+++ b/.github/workflows/test_github_action.yml
@@ -17,7 +17,9 @@ jobs:
 
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v2'
+      with:
+        project_id: ${{ secrets.GCP_PROJECT }}
 
     - name: Upload DAGs
-        run: |
-          gcloud compute ssh instance-20240812-082629 --zone us-central1-c --command "ls -al"
+      run: |
+        gcloud compute ssh instance-20240812-082629 --zone us-central1-c --command "ls -al"
