--- a/.github/workflows/test_github_action.yml
+++ b/.github/workflows/test_github_action.yml
@@ -20,10 +20,6 @@ jobs:
       with:
         project_id: ${{ secrets.GCP_PROJECT }}
 
-    - name: Check folders
-      run: |
-        gcloud compute ssh instance-20240812-082629 --zone us-central1-c --command "ls -al"
-
     - name: Upload DAGs
       run: |
-        gcloud compute scp ./dags/airflow_main.py instance-20240812-082629:. --zone us-central1-c
+        gcloud compute scp dags/airflow_main.py instance-20240812-082629 --zone us-central1-c
