--- a/.github/workflows/test_github_action.yml
+++ b/.github/workflows/test_github_action.yml
@@ -8,8 +8,12 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-  
+
     steps:
+    
+    - name: Checkout code
+      uses: actions/checkout@v2
+    
     - id: 'auth'
       uses: 'google-github-actions/auth@v2'
       with:
